[metadata]
name = bm25
version = 0.1.1
author = Himanshu Mittal
author_email = himanshum1312@gmail.com
description = BM25 NLP model
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/HimanshuMittal01/bm25
project_urls =
    Bug Tracker = https://github.com/HimanshuMittal01/bm25/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
packages = bm25
python_requires = >=3.6
