[metadata]
name = bagmodels
version = 0.1.5
author = Himanshu Mittal
author_email = himanshum1312@gmail.com
description = BM25 NLP model
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/HimanshuMittal01/bagmodels
project_urls =
    Bug Tracker = https://github.com/HimanshuMittal01/bagmodels/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
packages = bagmodels
python_requires = >=3.6
install_requires = 
    joblib